enum MyEnum {
  ONE,
  TWO,
  THREE
}
